working director creation