@@ -5,14 +5,25 @@ import org.springframework.web.multipart.MultipartFile;
 
 import java.io.File;
 import java.io.IOException;
+import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 
 public class FileUploader {
-    public static void saveFileToLocalDirectory(MultipartFile file, String directoryPath, String fileName) throws IOException {
-        Path targetLocation = Path.of(directoryPath, fileName);
+    public static void saveFileToLocalDirectory(MultipartFile file, String uploadDirectory, String fileName) throws IOException {
+//        String uploadDirectory=System.getProperty("upload.directory")+directoryPath;
+            Path uploadPath = Paths.get(uploadDirectory);
+            if (!Files.exists(uploadPath)) {
+                Files.createDirectories(uploadPath);
+            }
 
-        Files.copy(file.getInputStream(), targetLocation, StandardCopyOption.REPLACE_EXISTING);
-    }
+            try (InputStream inputStream = file.getInputStream()) {
+                Path filePath = uploadPath.resolve(fileName);
+                Files.copy(inputStream, filePath, StandardCopyOption.REPLACE_EXISTING);
+            } catch (IOException ioe) {
+                throw new IOException("Could not save image file: " + fileName, ioe);
+            }
+        }
 }
